# Scalarmeta

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  understanding.md  validate-submission.ps1
docs/: buildplan.md  masterplan.md  progress.md
server/: app.py
src/env/: __init__.py  environment.py  graders.py  models.py  observation.py  rewards.py  scenarios.py  state.py  tool_registry.py  tools_coordinator.py  tools_dispatch.py  tools_intake.py  tools_monitor.py
tests/: run_all.py  test_enhancements.py  test_environment.py  test_hackathon_compliance.py  test_inference.py  test_masterplan_requirements.py  test_phase1_models.py  test_phase2_scenarios.py  test_phase3_state.py  test_phases_5_to_8.py  test_rewards_graders.py  test_server.py  test_temporal.py  test_temporal_unit.py  test_tools.py  test_validator_readiness.py
