[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disaster-relief-coordination"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for disaster relief coordination"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "participant" }
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.1",
  "openai>=1.30.0",
  "httpx>=0.27.0",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["app", "environment", "inference"]
packages = ["src", "src.env", "server"]
